test/compile_errors/err_recovery_missing_colon.w
//! expect-error: expected

fn greet(name: str)
    let x = 42

fn main:
    greet("hi")
